--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,10 +13,10 @@
   // uncomment the target of your chip.
   //"rust-analyzer.cargo.target": "thumbv6m-none-eabi",
   //"rust-analyzer.cargo.target": "thumbv7m-none-eabi",
-  "rust-analyzer.cargo.target": "thumbv7em-none-eabi",
-  //"rust-analyzer.cargo.target": "thumbv8m.main-none-eabihf",
+  // "rust-analyzer.cargo.target": "thumbv7em-none-eabi",
+  "rust-analyzer.cargo.target": "thumbv8m.main-none-eabihf",
   "rust-analyzer.cargo.features": [
-    "stm32f103c8",
+    "stm32u585vi",
     "time-driver-any",
     "unstable-pac",
     "exti",
